--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <a href="./index.html"><span>Web</span>Studio</a> 
-        <ul>
+        <a href="./index.html"><span class="logo">Web</span><span class="logo-studio">Studio</span></a> 
+        <ul class="">
             <li><a href="./index.html">Студія</a></li>
             <li><a href="./portfolio.html">Портфоліо</a></li>
             <li><a href="#">Контакти</a></li>
@@ -25,33 +25,33 @@
         </ul>
     </header> 
     <main>
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
+        <section clsss="hero">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
-        <section>
-            <h2>Наші переваги</h2>
+        <section clsss="excellence">
+            <h2 class="title">Наші переваги</h2>
             <ul>
                 <li>
-                    <h3>Увага до деталей</h3>
+                    <h3 class="execellence-title">Увага до деталей</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальність</h3>
+                    <h3 class="execellence-title">Пунктуальність</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>Планування</h3>
+                    <h3 class="execellence-title">Планування</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>Сучасні технологіЇ</h3>
+                    <h3 class="execellence-title">Сучасні технологіЇ</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чим ми займаємося</h2>
+        <section clsss="activities">
+            <h2 class="title">Чим ми займаємося</h2>
             <ul>
                 <li>
                     <img src="./img/box1.jpg" alt="Десктопні додатки" height="294" width="370">
@@ -64,34 +64,34 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
+        <section clsss="team">
+            <h2 class="title">Наша команда</h2>
             <ul>
                 <li>
                     <img src="./img/img1.jpg" alt="Молодий чоловік" height="260" width="270">
-                    <h3>Ігор Дем'яненко</h3>
+                    <h3 class="team-title"=>Ігор Дем'яненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./img/img2.jpg" alt="Гарна дівчина" height="260" width="270">
-                    <h3>Ольга Рєпіна</h3>
+                    <h3 class="team-title">Ольга Рєпіна</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./img/img3.jpg" alt="Усміхнений хлопець" height="260" width="270">
-                    <h3>Микола Тарасов</h3>
+                    <h3 class="team-title">Микола Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./img/img4.jpg" alt="Усміхнений хлопець в окулярах" height="260" width="270">
-                    <h3>Михайло Єрмаков</h3>
+                    <h3 class="team-title">Михайло Єрмаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><span class="logo">Web</span><span class="logo-studio">Studio</span></a>
         <address>
             <ul>
                 <li>
