--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <link rel="stylesheet" href="./styles/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto+Mono:wght@400;500;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="./index.html"><span class="logo">Web</span><span class="logo-studio">Studio</span></a> 
+        <a  class="link-logo" href="./index.html"><span class="logo">Web</span><span class="logo-studio">Studio</span></a> 
         <ul class="">
-            <li><a href="./index.html">Студія</a></li>
-            <li><a href="./portfolio.html">Портфоліо</a></li>
-            <li><a href="#">Контакти</a></li>
+            <li><a class="link" href="./index.html">Студія</a></li>
+            <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="link" href="#">Контакти</a></li>
         </ul>
         <ul>
-            <li><a href="meilto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link" href="meilto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header> 
     <main>
-        <section clsss="hero">
+        <section class="hero">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
             <button type="button">Замовити послугу</button>
         </section>
-        <section clsss="excellence">
+        <section class="excellence">
             <h2 class="title">Наші переваги</h2>
             <ul>
                 <li>
@@ -38,19 +38,19 @@
                 </li>
                 <li>
                     <h3 class="execellence-title">Пунктуальність</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                    <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
                     <h3 class="execellence-title">Планування</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                    <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
                     <h3 class="execellence-title">Сучасні технологіЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
-        <section clsss="activities">
+        <section class="activities">
             <h2 class="title">Чим ми займаємося</h2>
             <ul>
                 <li>
@@ -64,45 +64,47 @@
                 </li>
             </ul>
         </section>
-        <section clsss="team">
+        <section class="team">
             <h2 class="title">Наша команда</h2>
             <ul>
-                <li>
+                <li class="teamcard">
                     <img src="./img/img1.jpg" alt="Молодий чоловік" height="260" width="270">
-                    <h3 class="team-title"=>Ігор Дем'яненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="team-title">Ігор Дем'яненко</h3>
+                    <p lang="en" class="text">Product Designer</p>
                 </li>
-                <li>
+                <li class="teamcard">
                     <img src="./img/img2.jpg" alt="Гарна дівчина" height="260" width="270">
                     <h3 class="team-title">Ольга Рєпіна</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <p lang="en" class="text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="teamcard">
                     <img src="./img/img3.jpg" alt="Усміхнений хлопець" height="260" width="270">
                     <h3 class="team-title">Микола Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <p lang="en" class="text">Marketing</p>
                 </li>
-                <li>
+                <li class="teamcard">
                     <img src="./img/img4.jpg" alt="Усміхнений хлопець в окулярах" height="260" width="270">
                     <h3 class="team-title">Михайло Єрмаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <p lang="en" class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="./index.html"><span class="logo">Web</span><span class="logo-studio">Studio</span></a>
-        <address>
+        <a class="link-logo" href="./index.html"><span class="logo">Web</span><span class="logo-studio">Studio</span></a>
+        <address class="address">
             <ul>
                 <li>
-                    <a
-                        href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м.
-                        Київ, пр-т Лесі Українки, 26</a>
+                    <a class="link" href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
+                        <span class="address-item">
+                            м. Київ, пр-т Лесі Українки, 26
+                        </span></a>
                 </li>
                 <li>
-                    <a href="meilto:info@devstudio.com">info@devstudio.com</a></li>
+                    <a class="link" href="meilto:info@devstudio.com"><span class="item">info@devstudio.com</span></a>
+                </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="link" href="tel:+380961111111"><span class="item">+38 096 111 11 11</span></a>
                 </li>
             </ul>
         </address>
