--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./styles/styles.css"/>
+    <link rel="stylesheet" href="./styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -14,20 +14,20 @@
 <body>
     <header>
         <a  class="link-logo" href="./index.html"><span class="logo">Web</span><span class="logo-studio">Studio</span></a> 
-        <ul class="">
-            <li><a class="link" href="./index.html">Студія</a></li>
+        <ul class="site-nav">
+            <li><a class="link current" href="./index.html">Студія</a></li>
             <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
             <li><a class="link" href="#">Контакти</a></li>
         </ul>
         <ul>
-            <li><a class="link" href="meilto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link email" href="meilto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header> 
     <main>
         <section class="hero">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+            <button class="primary-button" type="button">Замовити послугу</button>
         </section>
         <section class="excellence">
             <h2 class="title">Наші переваги</h2>
@@ -95,16 +95,16 @@
         <address class="address">
             <ul>
                 <li>
-                    <a class="link" href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
-                        <span class="address-item">
+                    <a href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
+                        <span class="link address-item">
                             м. Київ, пр-т Лесі Українки, 26
                         </span></a>
                 </li>
                 <li>
-                    <a class="link" href="meilto:info@devstudio.com"><span class="item">info@devstudio.com</span></a>
+                    <a href="meilto:info@devstudio.com"><span class="link item">info@devstudio.com</span></a>
                 </li>
                 <li>
-                    <a class="link" href="tel:+380961111111"><span class="item">+38 096 111 11 11</span></a>
+                    <a href="tel:+380961111111"><span class="link item">+38 096 111 11 11</span></a>
                 </li>
             </ul>
         </address>
