--- a/portfolio.html
+++ b/portfolio.html
@@ -6,39 +6,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./index.html">Студія</a></li>
-            <li><a href="#">Портфоліо</a></li>
-            <li><a href="#">Контакти</a></li>
+        <a class="link-logo" href="./index.html"><span class="logo">Web</span><span
+                class="logo-studio">Studio</span></a>
+        <ul class="site-nav">
+            <li><a class="link" href="./index.html">Студія</a></li>
+            <li><a class="link current" href="./portfolio.html">Портфоліо</a></li>
+            <li><a class="link" href="#">Контакти</a></li>
         </ul>
         <ul>
-            <li><a href="meilto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link email" href="meilto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        
-    </section>
+        <h1>Портфоліо</h1>
+        <ul>
+            <li><button type="button">Усі</button></li>
+            <li><button type="button">Веб-сайти</button></li>
+            <li><button type="button">Додатки</button></li>
+            <li><button type="button">Дизайн</button></li>
+            <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <ul>
+            <li>
+                
+            </li>
+        </ul>
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
+        <a class="link-logo" href="./index.html"><span class="logo">Web</span><span
+                class="logo-studio">Studio</span></a>
+        <address class="address">
             <ul>
                 <li>
                     <a
-                        href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">м.
-                        Київ, пр-т Лесі Українки, 26</a>
+                        href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
+                        <span class="link address-item">
+                            м. Київ, пр-т Лесі Українки, 26
+                        </span></a>
                 </li>
                 <li>
-                    <a href="meilto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="meilto:info@devstudio.com"><span class="link item">info@devstudio.com</span></a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111"><span class="link item">+38 096 111 11 11</span></a>
                 </li>
             </ul>
         </address>
