--- a/portfolio.html
+++ b/portfolio.html
@@ -29,20 +29,63 @@
         </ul>
     </header>
     <main>
-        <h1>Портфоліо</h1>
-        <ul>
-            <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+        <h1 class="portfolio-title">Портфоліо</h1>
+        <ul class="filters">
+            <li><button class="filter-button current" type="button">Усі</button></li>
+            <li><button class="filter-button" type="button">Веб-сайти</button></li>
+            <li><button class="filter-button" type="button">Додатки</button></li>
+            <li><button class="filter-button" type="button">Дизайн</button></li>
+            <li><button class="filter-button" type="button">Маркетинг</button></li>
         </ul>
         <ul>
-            <li>
-                
+            <li class="project">
+                <img src="./img/img11.jpg" alt=" Відкритий ноутбук" height="294" width="370">
+                <h2 class="project-title">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+            </li>
+            <li class="project">
+                <img src="./img/img22.jpg" alt="Баскетбол" height="294" width="370">
+                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                <p class="text">Дизайн</p>
+            </li>
+            <li class="project">
+                <img src="./img/img33.jpg" alt="Логотип ресторана" height="294" width="370">
+                <h2 class="project-title">Ресторан Seafood</h2>
+                <p class="text">Додаток</p>
+            </li>
+            <li class="project">
+                <img src="./img/img44.jpg" alt="Навушники" height="294" width="370">
+                <h2 class="project-title">Проєкт Prime</h2>
+                <p class="text">Маркетинг</p>
+            </li>
+            <li class="project">
+                <img src="./img/img55.jpg" alt="Подарункові коробочки" height="294" width="370">
+                <h2 class="project-title">Проєкт Boxes</h2>
+                <p class="text">Додаток</p>
+            </li>
+            <li class="project">
+                <img src="./img/img66.jpg" alt="Монітор" height="294" width="370">
+                <h2 class="project-title">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
+            </li> 
+            <li class="project">
+                <img src="./img/img77.jpg" alt="Розкритий журнал" height="294" width="370">
+                <h2 class="project-title">Видання Limited Edition</h2>
+                <p v>Дизайн</p>
+            </li>
+            <li class="project">
+                <img src="./img/img88.jpg" alt="Дизайн етикетки" height="294" width="370">
+                <h2 class="project-title">Проєкт LAB</h2>
+                <p class="text">Маркетинг</p>
+            </li>
+            <li class="project">
+                <img src="./img/img99.jpg" alt="Робота за ноутбуком" height="294" width="370">
+                <h2 class="project-title">Growing Business</h2>
+                <p class="text">Додаток</p>
             </li>
         </ul>
     </main>
+
     <footer>
         <a class="link-logo" href="./index.html"><span class="logo">Web</span><span
                 class="logo-studio">Studio</span></a>
