--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
             <li class="project">
                 <img src="./img/img77.jpg" alt="Розкритий журнал" height="294" width="370">
                 <h2 class="project-title">Видання Limited Edition</h2>
-                <p v>Дизайн</p>
+                <p class="text">Дизайн</p>
             </li>
             <li class="project">
                 <img src="./img/img88.jpg" alt="Дизайн етикетки" height="294" width="370">
