--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
         <address class="address">
             <ul>
                 <li>
-                    <a href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
+                    <a class="link address" href="https://www.google.com/maps/place/бульвар+Лесі+Українки,+26,+Київ,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
                         <span class="link address-item">
                             м. Київ, пр-т Лесі Українки, 26
                         </span></a>
                 </li>
                 <li>
-                    <a href="meilto:info@devstudio.com"><span class="link item">info@devstudio.com</span></a>
+                    <a class="link email" href="meilto:info@devstudio.com"><span class="link item">info@devstudio.com</span></a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111"><span class="link item">+38 096 111 11 11</span></a>
+                    <a class="link tel" href="tel:+380961111111"><span class="link item">+38 096 111 11 11</span></a>
                 </li>
             </ul>
         </address>
