--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
         </ul>
     </header>
     <main>
+        <section>
         <h1 class="portfolio-title">Портфоліо</h1>
         <ul class="filters">
             <li><button class="filter-button current" type="button">Усі</button></li>
@@ -84,6 +85,7 @@
                 <p class="text">Додаток</p>
             </li>
         </ul>
+        </section>
     </main>
 
     <footer>
